--- a/src/pug/base/subscribe.pug
+++ b/src/pug/base/subscribe.pug
@@ -5,7 +5,7 @@
     .row
       form.form.col-xl-4.offset-xl-4.col-md-6.offset-md-3.col-sm-8.offset-sm-2(action="#")
         .form__item.mb-4
-          input.form__field.input-email(type="text" value="")
+          input.form__field(type="text" value="")
           label.form__label.form__label_title e-mail
         button.btn.text-uppercase.px-4.mb-3(type="submit") перезвонить мне
         .h6 Нажимая “Подписаться” вы принимаете условия&nbsp;
