--- a/src/pug/checkout__customer.pug
+++ b/src/pug/checkout__customer.pug
@@ -25,7 +25,7 @@ block checkout
         input.form__field.input-phone(type="text" value="")
         .form__label.form__label_title Номер телефона*
       .form__item
-        input.form__field.input-email(type="text" value="")
+        input.form__field(type="text" value="")
         .form__label.form__label_title E-mail*
     .d-flex.align-items-end.justify-content-between.px-md-4.px-3.py-3
       span.h6 *-поля обязательные для заполнения
