--- a/src/pug/base/category-details.pug
+++ b/src/pug/base/category-details.pug
@@ -7,94 +7,112 @@
           span.mr-2 Автотовары
       .category-menu
         .category-menu__item
-          a.category-menu__title(href="#") Автоаксессуары
-          button.category-menu__toggler.btn-unstyled(type="button")
-            +icon('arrow-right','h4')
+          a.category-menu__title(href="https://ya.ru")
+            span.d-block.pointer-events-none.mr-2 Автоаксессуары
+            button.category-menu__toggler.btn-unstyled(type="button")
+              +icon('arrow-right','h4')
+        .category-menu__dropdown
+          a.category-menu__link(href="#") Ароматизатор подвесной CONTEX SEX QUEEN (слад. цветоч. лепестк.)
+          a.category-menu__link(href="#") Видеорегистраторы
+          a.category-menu__link(href="#") Видеорегистраторы
+          a.category-menu__link(href="#") Видеорегистраторы
+        .category-menu__item
+          a.category-menu__title(href="https://ya.ru")
+            span.d-block.pointer-events-none.mr-2 Автохимия
+            button.category-menu__toggler.btn-unstyled(type="button")
+              +icon('arrow-right','h4')
         .category-menu__dropdown
           a.category-menu__link(href="#") Видеорегистраторы
           a.category-menu__link(href="#") Видеорегистраторы
           a.category-menu__link(href="#") Видеорегистраторы
           a.category-menu__link(href="#") Видеорегистраторы
         .category-menu__item
-          a.category-menu__title(href="#") Автохимия
-          button.category-menu__toggler.btn-unstyled(type="button")
-            +icon('arrow-right','h4')
+          a.category-menu__title(href="https://ya.ru")
+            span.d-block.pointer-events-none.mr-2 Авточехлы
+            button.category-menu__toggler.btn-unstyled(type="button")
+              +icon('arrow-right','h4')
         .category-menu__dropdown
           a.category-menu__link(href="#") Видеорегистраторы
           a.category-menu__link(href="#") Видеорегистраторы
           a.category-menu__link(href="#") Видеорегистраторы
           a.category-menu__link(href="#") Видеорегистраторы
         .category-menu__item
-          a.category-menu__title(href="#") Авточехлы
-          button.category-menu__toggler.btn-unstyled(type="button")
-            +icon('arrow-right','h4')
+          a.category-menu__title(href="https://ya.ru")
+            span.d-block.pointer-events-none.mr-2 Автоаксессуары
+            button.category-menu__toggler.btn-unstyled(type="button")
+              +icon('arrow-right','h4')
         .category-menu__dropdown
           a.category-menu__link(href="#") Видеорегистраторы
           a.category-menu__link(href="#") Видеорегистраторы
           a.category-menu__link(href="#") Видеорегистраторы
           a.category-menu__link(href="#") Видеорегистраторы
         .category-menu__item
-          a.category-menu__title(href="#") Автоаксессуары
-          button.category-menu__toggler.btn-unstyled(type="button")
-            +icon('arrow-right','h4')
-        .category-menu__dropdown
-          a.category-menu__link(href="#") Видеорегистраторы
-          a.category-menu__link(href="#") Видеорегистраторы
-          a.category-menu__link(href="#") Видеорегистраторы
-          a.category-menu__link(href="#") Видеорегистраторы
-        .category-menu__item
-          a.category-menu__title(href="#") Ароматизаторы
-          button.category-menu__toggler.btn-unstyled(type="button")
-            +icon('arrow-right','h4')
+          a.category-menu__title(href="https://ya.ru")
+            span.d-block.pointer-events-none.mr-2 Ароматизаторы
+            button.category-menu__toggler.btn-unstyled(type="button")
+              +icon('arrow-right','h4')
         .category-menu__item.category-menu__item_current
-          a.category-menu__title(href="#") Болты ГБЦ, Болты/Гайки прочее
-          button.category-menu__toggler.btn-unstyled(type="button")
-            +icon('arrow-right','h4')
+          a.category-menu__title(href="https://ya.ru")
+            span.d-block.pointer-events-none.mr-2 Болты ГБЦ, Болты/Гайки прочее
+            button.category-menu__toggler.btn-unstyled(type="button")
+              +icon('arrow-right','h4')
         .category-menu__item
-          a.category-menu__title(href="#") ДМРВ, Глушители, Лямбды, Гофры
-          button.category-menu__toggler.btn-unstyled(type="button")
-            +icon('arrow-right','h4')
+          a.category-menu__title(href="https://ya.ru")
+            span.d-block.pointer-events-none.mr-2 ДМРВ, Глушители, Лямбды, Гофры
+            button.category-menu__toggler.btn-unstyled(type="button")
+              +icon('arrow-right','h4')
         .category-menu__item
-          a.category-menu__title(href="#") Датчики (контроллеры) давления в шинах
-          button.category-menu__toggler.btn-unstyled(type="button")
-            +icon('arrow-right','h4')
+          a.category-menu__title(href="https://ya.ru")
+            span.d-block.pointer-events-none.mr-2 Датчики (контроллеры) давления в шинах
+            button.category-menu__toggler.btn-unstyled(type="button")
+              +icon('arrow-right','h4')
         .category-menu__item
-          a.category-menu__title(href="#") Двигатель, КПП/АКПП
-          button.category-menu__toggler.btn-unstyled(type="button")
-            +icon('arrow-right','h4')
+          a.category-menu__title(href="https://ya.ru")
+            span.d-block.pointer-events-none.mr-2 Двигатель, КПП/АКПП
+            button.category-menu__toggler.btn-unstyled(type="button")
+              +icon('arrow-right','h4')
         .category-menu__item
-          a.category-menu__title(href="#") Комплект ГРМ и Ролики натяжения
-          button.category-menu__toggler.btn-unstyled(type="button")
-            +icon('arrow-right','h4')
+          a.category-menu__title(href="https://ya.ru")
+            span.d-block.pointer-events-none.mr-2 Комплект ГРМ и Ролики натяжения
+            button.category-menu__toggler.btn-unstyled(type="button")
+              +icon('arrow-right','h4')
         .category-menu__item
-          a.category-menu__title(href="#") Крепеж диски
-          button.category-menu__toggler.btn-unstyled(type="button")
-            +icon('arrow-right','h4')
+          a.category-menu__title(href="https://ya.ru")
+            span.d-block.pointer-events-none.mr-2 Крепеж диски
+            button.category-menu__toggler.btn-unstyled(type="button")
+              +icon('arrow-right','h4')
         .category-menu__item
-          a.category-menu__title(href="#") Кузовные детали и аксессуары
-          button.category-menu__toggler.btn-unstyled(type="button")
-            +icon('arrow-right','h4')
+          a.category-menu__title(href="https://ya.ru")
+            span.d-block.pointer-events-none.mr-2 Кузовные детали и аксессуары
+            button.category-menu__toggler.btn-unstyled(type="button")
+              +icon('arrow-right','h4')
         .category-menu__item
-          a.category-menu__title(href="#") Лампы
-          button.category-menu__toggler.btn-unstyled(type="button")
-            +icon('arrow-right','h4')
+          a.category-menu__title(href="https://ya.ru")
+            span.d-block.pointer-events-none.mr-2 Лампы
+            button.category-menu__toggler.btn-unstyled(type="button")
+              +icon('arrow-right','h4')
         .category-menu__item
-          a.category-menu__title(href="#") Подшипники и генераторы
-          button.category-menu__toggler.btn-unstyled(type="button")
-            +icon('arrow-right','h4')
+          a.category-menu__title(href="https://ya.ru")
+            span.d-block.pointer-events-none.mr-2 Подшипники и генераторы
+            button.category-menu__toggler.btn-unstyled(type="button")
+              +icon('arrow-right','h4')
         .category-menu__item
-          a.category-menu__title(href="#") Провода Bысоковольтные В/В
-          button.category-menu__toggler.btn-unstyled(type="button")
-            +icon('arrow-right','h4')
+          a.category-menu__title(href="https://ya.ru")
+            span.d-block.pointer-events-none.mr-2 Провода Bысоковольтные В/В
+            button.category-menu__toggler.btn-unstyled(type="button")
+              +icon('arrow-right','h4')
         .category-menu__item
-          a.category-menu__title(href="#") Пружины и Прокладки пружин
-          button.category-menu__toggler.btn-unstyled(type="button")
-            +icon('arrow-right','h4')
+          a.category-menu__title(href="https://ya.ru")
+            span.d-block.pointer-events-none.mr-2 Пружины и Прокладки пружин
+            button.category-menu__toggler.btn-unstyled(type="button")
+              +icon('arrow-right','h4')
         .category-menu__item
-          a.category-menu__title(href="#") Ремни
-          button.category-menu__toggler.btn-unstyled(type="button")
-            +icon('arrow-right','h4')
+          a.category-menu__title(href="https://ya.ru")
+            span.d-block.pointer-events-none.mr-2 Ремни
+            button.category-menu__toggler.btn-unstyled(type="button")
+              +icon('arrow-right','h4')
         .category-menu__item
-          a.category-menu__title(href="#") Рулевые механизмы и ходовая система
-          button.category-menu__toggler.btn-unstyled(type="button")
-            +icon('arrow-right','h4')
+          a.category-menu__title(href="https://ya.ru")
+            span.d-block.pointer-events-none.mr-2 Рулевые механизмы и ходовая система
+            button.category-menu__toggler.btn-unstyled(type="button")
+              +icon('arrow-right','h4')
