--- a/src/pug/personal-booking.pug
+++ b/src/pug/personal-booking.pug
@@ -127,7 +127,7 @@ block popups
                     input.form__field(type="text" value="")
                     label.form__label.form__label_title +7 (___) ___-__-__*
                   .form__item.mb-4
-                    input.form__field.input-email(type="text" value="")
+                    input.form__field(type="text" value="")
                     label.form__label.form__label_title e-mail*
                 .col-lg-5.offset-lg-2.d-flex.flex-column
                   .form__item.mb-4
