--- a/src/pug/personal.pug
+++ b/src/pug/personal.pug
@@ -5,11 +5,11 @@ block meta
 
 block filter
   .header__footer
-    button.filter-toggler.d-flex.align-items-center.justify-content-center.p-2(type="button")
-      +icon('filter', 'filter-toggler__icon mr-2')
-      span.filter-toggler__title
-        span.filter-toggler__show Показать&nbsp;
-        span.filter-toggler__hide Скрыть&nbsp;
+    button.aside-toggler.d-flex.align-items-center.justify-content-center.p-2(type="button" data-target="#leftmenu")
+      +icon('filter', 'aside-toggler__icon mr-2')
+      span.pointer-events-none
+        span.aside-toggler__show Показать&nbsp;
+        span.aside-toggler__hide Скрыть&nbsp;
         | меню
 
 block wrapper
@@ -26,13 +26,12 @@ block wrapper
     section.content
       h1(itemprop="name") Личный кабинет
     .row.align-items-start
-      .sidebar.col-xl-3.col-lg-4.mb-lg-4
-        .filter.filter_sticky
-          .filter__body
-            nav.leftmenu
-              - var leftmenu = [{title: 'Мои заказы', icon: 'case', badge: 'bg-theme-brand', badge__text: '2'}, {title: 'Избранное', icon: 'favourite', badge: 'bg-theme-success', badge__text: '3'}, {title: 'Бонусные рубли', icon: 'gift', badge: 'bg-theme-success', badge__text: '300', badge__extratext: true}, {title: 'Запись на услуги', icon: 'services'},{title: 'Подбор по VIN', icon: 'settings', badge: 'bg-theme-success', badge__text: '1'}, {title: 'Персональные данные', icon: 'user'},{title: 'Мой автомобиль', icon: 'car'}, {title: 'Смена пароля', icon: 'shield'},{title: 'Выход', icon: 'exit'}]
-              each leftmenu__item in leftmenu
-                +leftmenu(leftmenu__item.title, leftmenu__item.icon, leftmenu__item.badge, leftmenu__item.badge__text, leftmenu__item.badge__extratext)
+      #leftmenu.aside.aside_pos_sticky.col-xl-3.col-lg-4.mb-lg-4
+        .aside__wrapper
+          nav.leftmenu
+            - var leftmenu = [{title: 'Мои заказы', icon: 'case', badge: 'bg-theme-brand', badge__text: '2'}, {title: 'Избранное', icon: 'favourite', badge: 'bg-theme-success', badge__text: '3'}, {title: 'Бонусные рубли', icon: 'gift', badge: 'bg-theme-success', badge__text: '300', badge__extratext: true}, {title: 'Запись на услуги', icon: 'services'},{title: 'Подбор по VIN', icon: 'settings', badge: 'bg-theme-success', badge__text: '1'}, {title: 'Персональные данные', icon: 'user'},{title: 'Мой автомобиль', icon: 'car'}, {title: 'Смена пароля', icon: 'shield'},{title: 'Выход', icon: 'exit'}]
+            each leftmenu__item in leftmenu
+              +leftmenu(leftmenu__item.title, leftmenu__item.icon, leftmenu__item.badge, leftmenu__item.badge__text, leftmenu__item.badge__extratext)
 
       .col-xl-9.col-lg-8
         block personal
