--- a/src/pug/subcategory.pug
+++ b/src/pug/subcategory.pug
@@ -40,7 +40,7 @@ block wrapper
       .col-xl-10.col-lg-9.mb-4
         #detail.filter.filter_extend.filter_sticky
         #settings.filter.filter_extend.filter_sticky
-          .filter__body
+          .sidebar__wrapper
             .section.section_filter.bg-theme-white.py-0.mb-lg-3
               .section__expander.d-flex.align-items-center.justify-content-between.cursor-pointer.px-md-4.px-3.py-2
                 button.btn.btn_nobg.h4.p-0(type="button")
