--- a/src/scss/tpl/_filter-btn.scss
+++ b/src/scss/tpl/_filter-btn.scss
@@ -68,7 +68,7 @@
     display: inline;
   }
 
-  .filter__body {
+  .filter_-_body {
     @include media-breakpoint-down(md) {
       opacity: 1;
       height: auto;
