--- a/src/pug/base/category-details.pug
+++ b/src/pug/base/category-details.pug
@@ -1,5 +1,5 @@
 #detail.filter.filter_extend.filter_sticky
-  .filter__body
+  .sidebar__wrapper
     form.form.form_bg.form_filter(action="#")
       .form__header.d-flex.align-items-center.justify-content-between.d-lg-block
         .form__title.form__title_icon.text-nowrap.d-flex.align-items-center.h3.font-weight-bold.color-theme-brand
@@ -7,7 +7,7 @@
           span.mr-2 Автотовары
       .category-menu
         .category-menu__item
-          a.category-menu__title(href="https://ya.ru")
+          a.category-menu__title(href="https://don-shina.ru")
             span.d-block.pointer-events-none.mr-2 Автоаксессуары
             button.category-menu__toggler.btn-unstyled(type="button")
               +icon('arrow-right','h4')
@@ -17,7 +17,7 @@
           a.category-menu__link(href="#") Видеорегистраторы
           a.category-menu__link(href="#") Видеорегистраторы
         .category-menu__item
-          a.category-menu__title(href="https://ya.ru")
+          a.category-menu__title(href="https://don-shina.ru")
             span.d-block.pointer-events-none.mr-2 Автохимия
             button.category-menu__toggler.btn-unstyled(type="button")
               +icon('arrow-right','h4')
@@ -27,7 +27,7 @@
           a.category-menu__link(href="#") Видеорегистраторы
           a.category-menu__link(href="#") Видеорегистраторы
         .category-menu__item
-          a.category-menu__title(href="https://ya.ru")
+          a.category-menu__title(href="https://don-shina.ru")
             span.d-block.pointer-events-none.mr-2 Авточехлы
             button.category-menu__toggler.btn-unstyled(type="button")
               +icon('arrow-right','h4')
@@ -37,7 +37,7 @@
           a.category-menu__link(href="#") Видеорегистраторы
           a.category-menu__link(href="#") Видеорегистраторы
         .category-menu__item
-          a.category-menu__title(href="https://ya.ru")
+          a.category-menu__title(href="https://don-shina.ru")
             span.d-block.pointer-events-none.mr-2 Автоаксессуары
             button.category-menu__toggler.btn-unstyled(type="button")
               +icon('arrow-right','h4')
@@ -47,72 +47,72 @@
           a.category-menu__link(href="#") Видеорегистраторы
           a.category-menu__link(href="#") Видеорегистраторы
         .category-menu__item
-          a.category-menu__title(href="https://ya.ru")
+          a.category-menu__title(href="https://don-shina.ru")
             span.d-block.pointer-events-none.mr-2 Ароматизаторы
             button.category-menu__toggler.btn-unstyled(type="button")
               +icon('arrow-right','h4')
         .category-menu__item.category-menu__item_current
-          a.category-menu__title(href="https://ya.ru")
+          a.category-menu__title(href="https://don-shina.ru")
             span.d-block.pointer-events-none.mr-2 Болты ГБЦ, Болты/Гайки прочее
             button.category-menu__toggler.btn-unstyled(type="button")
               +icon('arrow-right','h4')
         .category-menu__item
-          a.category-menu__title(href="https://ya.ru")
+          a.category-menu__title(href="https://don-shina.ru")
             span.d-block.pointer-events-none.mr-2 ДМРВ, Глушители, Лямбды, Гофры
             button.category-menu__toggler.btn-unstyled(type="button")
               +icon('arrow-right','h4')
         .category-menu__item
-          a.category-menu__title(href="https://ya.ru")
+          a.category-menu__title(href="https://don-shina.ru")
             span.d-block.pointer-events-none.mr-2 Датчики (контроллеры) давления в шинах
             button.category-menu__toggler.btn-unstyled(type="button")
               +icon('arrow-right','h4')
         .category-menu__item
-          a.category-menu__title(href="https://ya.ru")
+          a.category-menu__title(href="https://don-shina.ru")
             span.d-block.pointer-events-none.mr-2 Двигатель, КПП/АКПП
             button.category-menu__toggler.btn-unstyled(type="button")
               +icon('arrow-right','h4')
         .category-menu__item
-          a.category-menu__title(href="https://ya.ru")
+          a.category-menu__title(href="https://don-shina.ru")
             span.d-block.pointer-events-none.mr-2 Комплект ГРМ и Ролики натяжения
             button.category-menu__toggler.btn-unstyled(type="button")
               +icon('arrow-right','h4')
         .category-menu__item
-          a.category-menu__title(href="https://ya.ru")
+          a.category-menu__title(href="https://don-shina.ru")
             span.d-block.pointer-events-none.mr-2 Крепеж диски
             button.category-menu__toggler.btn-unstyled(type="button")
               +icon('arrow-right','h4')
         .category-menu__item
-          a.category-menu__title(href="https://ya.ru")
+          a.category-menu__title(href="https://don-shina.ru")
             span.d-block.pointer-events-none.mr-2 Кузовные детали и аксессуары
             button.category-menu__toggler.btn-unstyled(type="button")
               +icon('arrow-right','h4')
         .category-menu__item
-          a.category-menu__title(href="https://ya.ru")
+          a.category-menu__title(href="https://don-shina.ru")
             span.d-block.pointer-events-none.mr-2 Лампы
             button.category-menu__toggler.btn-unstyled(type="button")
               +icon('arrow-right','h4')
         .category-menu__item
-          a.category-menu__title(href="https://ya.ru")
+          a.category-menu__title(href="https://don-shina.ru")
             span.d-block.pointer-events-none.mr-2 Подшипники и генераторы
             button.category-menu__toggler.btn-unstyled(type="button")
               +icon('arrow-right','h4')
         .category-menu__item
-          a.category-menu__title(href="https://ya.ru")
+          a.category-menu__title(href="https://don-shina.ru")
             span.d-block.pointer-events-none.mr-2 Провода Bысоковольтные В/В
             button.category-menu__toggler.btn-unstyled(type="button")
               +icon('arrow-right','h4')
         .category-menu__item
-          a.category-menu__title(href="https://ya.ru")
+          a.category-menu__title(href="https://don-shina.ru")
             span.d-block.pointer-events-none.mr-2 Пружины и Прокладки пружин
             button.category-menu__toggler.btn-unstyled(type="button")
               +icon('arrow-right','h4')
         .category-menu__item
-          a.category-menu__title(href="https://ya.ru")
+          a.category-menu__title(href="https://don-shina.ru")
             span.d-block.pointer-events-none.mr-2 Ремни
             button.category-menu__toggler.btn-unstyled(type="button")
               +icon('arrow-right','h4')
         .category-menu__item
-          a.category-menu__title(href="https://ya.ru")
+          a.category-menu__title(href="https://don-shina.ru")
             span.d-block.pointer-events-none.mr-2 Рулевые механизмы и ходовая система
             button.category-menu__toggler.btn-unstyled(type="button")
               +icon('arrow-right','h4')
