--- a/src/pug/category.pug
+++ b/src/pug/category.pug
@@ -37,7 +37,7 @@ block wrapper
       .category-counter.mb-4 1 840 товаров
 
       .filter.filter_sticky
-        .filter__body
+        .sidebar__wrapper
           .section.section_filter.bg-theme-white.py-0.mb-lg-3
             .section__expander.d-flex.align-items-center.justify-content-between.cursor-pointer.px-md-4.px-3.py-2
               button.btn.btn_nobg.h4.p-0(type="button")
