--- a/src/pug/filter-oil.pug
+++ b/src/pug/filter-oil.pug
@@ -29,7 +29,7 @@ block wrapper
       .row
         .col-xl-2.col-lg-3.mb-lg-4
           .filter.filter_sticky
-            .filter__body
+            .sidebar__wrapper
               form.form.form_bg.form_filter(action="#")
                 .form__header.d-flex.align-items-center.justify-content-between.d-lg-block
                   .form__title.form__title_icon.text-nowrap.d-flex.align-items-center.h3.font-weight-bold.color-theme-brand.mb-0.mb-lg-2
