--- a/src/pug/results-auto.pug
+++ b/src/pug/results-auto.pug
@@ -6,7 +6,7 @@ block meta
 
 block results__sidebar
   .filter.filter_sticky
-    .filter__body
+    .sidebar__wrapper
       form.form.form_bg.form_filter.mb-3(action="#")
         .form__header.d-flex.align-items-center.justify-content-between.d-lg-block
           .form__title.form__title_icon.text-nowrap.d-flex.align-items-center.h3.font-weight-bold.color-theme-brand.mb-0.mb-lg-2
