--- a/src/scss/tpl/_filter-toggler.scss
+++ b/src/scss/tpl/_filter-toggler.scss
@@ -1,25 +1,34 @@
-.filter-toggler {
+.aside-toggler {
   @extend %btn-default;
   @include wh(100%,40px);
   background: $color__light;
   color: $color__text_default;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, .12) inset;
+
+  &.aside-toggler_active {
+    color: #fff;
+    background: $color__brand;
+
+    .aside-toggler__show {
+      display: none;
+    }
+
+    .aside-toggler__hide {
+      display: inline;
+    }
+  }
 }
 
-.filter-toggler__icon {
+.aside-toggler__icon {
   @include fw(18px);
-  //@include wh(18px);
   pointer-events: none;
 }
 
-.filter-toggler__title {
-  pointer-events: none;
-}
-
-.filter-toggler__hide {
+.aside-toggler__hide {
   display: none;
 }
 
+/**/
 .filter-visible {
   @include media-breakpoint-down(md) {
     overflow: hidden;
@@ -31,20 +40,7 @@
     }
   }
 
-  .filter-toggler {
-    color: #fff;
-    background: $color__brand;
-  }
-
-  .filter-toggler__show {
-    display: none;
-  }
-
-  .filter-toggler__hide {
-    display: inline;
-  }
-
-  .filter__body {
+  .filter_-_body {
     @include media-breakpoint-down(md) {
       opacity: 1;
       height: auto;
