--- a/src/scss/tpl/_filter.scss
+++ b/src/scss/tpl/_filter.scss
@@ -1,6 +1,7 @@
 .filter {
   transition: all .3s ease;
 
+  /*
   &.filter_sticky {
     @include media-breakpoint-up(lg) {
       position: static;
@@ -14,6 +15,7 @@
       background: rgba(0,0,0,0);
     }
   }
+  */
 }
 
 .filter-visible {
@@ -42,7 +44,8 @@
   }
 }
 
-.filter__body {
+/*
+.filter_-_body {
   transition: all .3s ease;
 
   @include media-breakpoint-up(lg) {
@@ -59,6 +62,7 @@
     visibility: hidden;
   }
 }
+*/
 
 .filter__alert {
   z-index: 2;
