--- a/src/scss/tpl/_sidebar.scss
+++ b/src/scss/tpl/_sidebar.scss
@@ -1,14 +1,80 @@
-.sidebar {
+.aside {
+  transition: all .3s ease;
+
+  &.aside_pos_sticky {
+    @include media-breakpoint-up(lg) {
+      position: sticky;
+      left: 0;
+    }
+
+    @include media-breakpoint-only(xl) {
+      top: 85px;
+    }
+
+    @include media-breakpoint-only(lg) {
+      top: 140px;
+    }
+
+    @include media-breakpoint-down(md) {
+      @include pos(0,0,fixed);
+      width: 100%;
+      padding: 0;
+      z-index: 1080;
+      background: rgba(0,0,0,0);
+    }
+
+    &:before {
+      transition: all .3s ease;
+
+      @include media-breakpoint-up(lg) {
+        display: none;
+      }
+
+      @include media-breakpoint-down(md) {
+        @include pos(0,0);
+        @include wh(100%);
+        content: '';
+        opacity: 0;
+        z-index: 1;
+        background-color: rgba(82,82,82,.2);
+      }
+    }
+  }
+
+  &.aside_visible {
+    @include media-breakpoint-down(md) {
+      height: 100%;
+    }
+
+    &:before {
+      opacity: 1;
+    }
+
+    .aside__wrapper {
+      @include media-breakpoint-down(md) {
+        height: 100%;
+        opacity: 1;
+        pointer-events: all;
+      }
+    }
+  }
+}
+
+.aside__wrapper {
+  transition: all .3s ease;
+
   @include media-breakpoint-up(lg) {
-    position: sticky;
-    left: 0;
+    position: relative;
   }
 
-  @include media-breakpoint-only(xl) {
-    top: 85px;
-  }
-
-  @include media-breakpoint-only(lg) {
-    top: 140px;
+  @include media-breakpoint-down(md) {
+    @include pos(0,0);
+    right: 0;
+    bottom: 0;
+    height: 0;
+    opacity: 0;
+    z-index: 2;
+    overflow: hidden;
+    pointer-events: none;
   }
 }
