review/aside, final

--- a/src/pug/base/filter-tires.pug
+++ b/src/pug/base/filter-tires.pug
@@ -1,5 +1,5 @@
-.filter.filter_sticky
-  .sidebar__wrapper
+#filter.aside
+  .aside__wrapper
     form.form.form_bg.form_filter(action="#")
       .form__header.d-flex.align-items-center.justify-content-between.d-lg-block
         .form__title.form__title_icon.text-nowrap.d-flex.align-items-center.h3.font-weight-bold.color-theme-brand.mb-0.mb-lg-2
@@ -173,8 +173,8 @@
         button.readmore.d-flex.align-items-center(type="submit" data-toggle="list" data-target="#brand")
           span.h6.mr-2.pointer-events-none Показать еще
           +icon('readmore','h3 color-theme-brand readmore__icon')
-    .filter__alert.d-flex.align-items-center.justify-content-between.flex-lg-column.color-theme-white.bg-theme-brand.px-lg-3.pt-lg-1.pb-lg-3.py-3.px-4(style="top:574px;")
-      .filter__alert-info.h2.font-weight-bold.d-flex.align-items-center.mb-lg-1
+    .aside__alert.d-flex.align-items-center.justify-content-between.flex-lg-column.color-theme-white.bg-theme-brand.px-lg-3.pt-lg-1.pb-lg-3.py-3.px-4(style="top:574px;")
+      .aside__alert-info.h2.font-weight-bold.d-flex.align-items-center.mb-lg-1
         .h5.font-weight-normal.mr-2 Найдено:
         | 713
       button.btn.text-uppercase.btn_bordered.px-3(type="button") Показать
