--- a/src/pug/personal.pug
+++ b/src/pug/personal.pug
@@ -5,8 +5,8 @@ block meta
 
 block filter
   .header__footer
-    button.aside-toggler.d-flex.align-items-center.justify-content-center.p-2(type="button" data-target="#leftmenu")
-      +icon('filter', 'aside-toggler__icon mr-2')
+    button.aside-toggler.flex-grow-1.justify-content-center.px-3.py-2(type="button" data-target="#leftmenu")
+      +icon('filter', 'aside-toggler__icon h3 mr-2')
       span.pointer-events-none
         span.aside-toggler__show Показать&nbsp;
         span.aside-toggler__hide Скрыть&nbsp;
