--- a/src/pug/results-auto.pug
+++ b/src/pug/results-auto.pug
@@ -5,8 +5,8 @@ block meta
   - var h1 = 'Купить шины для HYUNDAI Accent 2000-2005 LC Sedan 1.3 в Ростове-на-Дону';
 
 block results__sidebar
-  .filter.filter_sticky
-    .sidebar__wrapper
+  #filter.aside
+    .aside__wrapper
       form.form.form_bg.form_filter.mb-3(action="#")
         .form__header.d-flex.align-items-center.justify-content-between.d-lg-block
           .form__title.form__title_icon.text-nowrap.d-flex.align-items-center.h3.font-weight-bold.color-theme-brand.mb-0.mb-lg-2
