--- a/src/pug/base/category-details.pug
+++ b/src/pug/base/category-details.pug
@@ -1,5 +1,5 @@
-#detail.filter.filter_extend.filter_sticky
-  .sidebar__wrapper
+#details.aside
+  .aside__wrapper
     form.form.form_bg.form_filter(action="#")
       .form__header.d-flex.align-items-center.justify-content-between.d-lg-block
         .form__title.form__title_icon.text-nowrap.d-flex.align-items-center.h3.font-weight-bold.color-theme-brand
