--- a/src/pug/filter-oil.pug
+++ b/src/pug/filter-oil.pug
@@ -5,11 +5,11 @@ block meta
 
 block filter
   .header__footer
-    button.filter-toggler.d-flex.align-items-center.justify-content-center.p-2(type="button")
-      +icon('filter','filter-toggler__icon h4 mr-2')
-      span.filter-toggler__title
-        span.filter-toggler__show Показать
-        span.filter-toggler__hide Скрыть
+    button.aside-toggler.flex-grow-1.justify-content-center.px-3.py-2(type="button" data-target="#filter")
+      +icon('filter', 'aside-toggler__icon h3 mr-2')
+      span.pointer-events-none
+        span.aside-toggler__show Показать&nbsp;
+        span.aside-toggler__hide Скрыть&nbsp;
         | фильтр
 
 block wrapper
@@ -28,8 +28,8 @@ block wrapper
       .category-counter.mb-4 1 840 товаров в 4 каталогах
       .row
         .col-xl-2.col-lg-3.mb-lg-4
-          .filter.filter_sticky
-            .sidebar__wrapper
+          #filter.aside
+            .aside__wrapper
               form.form.form_bg.form_filter(action="#")
                 .form__header.d-flex.align-items-center.justify-content-between.d-lg-block
                   .form__title.form__title_icon.text-nowrap.d-flex.align-items-center.h3.font-weight-bold.color-theme-brand.mb-0.mb-lg-2
@@ -157,8 +157,8 @@ block wrapper
                   button.btn-unstyled.d-flex.align-items-center(type="submit")
                     span.h6.mr-2 Показать еще
                     +icon('readmore','h3 color-theme-brand')
-              .filter__alert.d-flex.align-items-center.justify-content-between.flex-lg-column.color-theme-white.bg-theme-brand.px-lg-3.pt-lg-1.pb-lg-3.py-3.px-4
-                .filter__alert-info.h2.font-weight-bold.d-flex.align-items-center.mb-lg-1
+              .aside__alert.d-flex.align-items-center.justify-content-between.flex-lg-column.color-theme-white.bg-theme-brand.px-lg-3.pt-lg-1.pb-lg-3.py-3.px-4
+                .aside__alert-info.h2.font-weight-bold.d-flex.align-items-center.mb-lg-1
                   .h5.font-weight-normal.mr-2 Найдено:
                   | 713
                 button.btn.text-uppercase.btn_bordered.px-3(type="button") Показать
