--- a/src/pug/results.pug
+++ b/src/pug/results.pug
@@ -6,11 +6,11 @@ block meta
 
 block filter
   .header__footer
-    button.filter-toggler.d-flex.align-items-center.justify-content-center.p-2(type="button")
-      +icon('filter','filter-toggler__icon h4 mr-2')
-      span.filter-toggler__title
-        span.filter-toggler__show Показать
-        span.filter-toggler__hide Скрыть
+    button.aside-toggler.flex-grow-1.justify-content-center.px-3.py-2(type="button" data-target="#filter")
+      +icon('filter', 'aside-toggler__icon h3 mr-2')
+      span.pointer-events-none
+        span.aside-toggler__show Показать&nbsp;
+        span.aside-toggler__hide Скрыть&nbsp;
         | фильтр
 
 block wrapper
