--- a/src/scss/base/_mixes.scss
+++ b/src/scss/base/_mixes.scss
@@ -50,6 +50,10 @@
   box-shadow: 1px 1px 8px 0 rgba(0, 0, 0, .16);
 }
 
+.box-shadow-none {
+  box-shadow: none !important;
+}
+
 .pointer-events-none {
   pointer-events: none !important;
 }
