--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -46,9 +46,8 @@ $grid-gutter-width: 8px;
 @import 'tpl/brand';
 @import 'tpl/media';
 @import 'tpl/sales';
-@import 'tpl/filter';
-@import 'tpl/filter-btn';
-@import 'tpl/filter-toggler';
+@import 'tpl/aside';
+@import 'tpl/aside-toggler';
 @import 'tpl/category-menu';
 @import 'tpl/booking-form';
 @import 'tpl/booking-heading';
@@ -61,7 +60,6 @@ $grid-gutter-width: 8px;
 @import 'tpl/content';
 @import 'tpl/feature';
 @import 'tpl/wrapper';
-@import 'tpl/sidebar';
 @import 'tpl/pathway';
 @import 'tpl/topmenu';
 @import 'tpl/heading';
